# tron-bridge

./: .gitignore  Cargo.toml
app_ecdsa/: Cargo.toml
app_ecdsa/src/: lib.rs
app_state/: Cargo.toml
app_state/src/: lib.rs  pg_client.rs
bridge/: Cargo.toml
bridge/src/: crypto.rs  main.rs  sign.rs
sql/: create_db.sql
src/: main.rs
