[package]
name = "app_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
awc = {version = "3.2.0", features = ["rustls-0_21"] }
reqwest = "0.11.22"
rustls = "0.21.7"
tokio = "1.33.0"
tokio-postgres = "0.7.10"
webpki-roots = "0.25.2"

app_config = { path = "../app_config" }
