[package]
name = "tron-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
ecdsa = "0.16.8"
k256 = "0.13.1"
p256 = {version = "0.13.2", features = ["pem"]}
reqwest = "0.11.22"
secp256k1 = {version = "0.28.0", features = ["hashes-std", "recovery"]}
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"

app_state = { path = "../app_state" }
