[package]
name = "tron-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
aes-gcm = "0.10.3"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.20"
malachite = "0.4.2"
malachite-base = "0.4.2"
rand = "0.8.5"
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
sha256 = "1.4.0"

app_config = { path = "../app_config" }
app_ecdsa = { path = "../app_ecdsa" }
app_state = { path = "../app_state" }
